2001-02-22  John Harper  <jsh@eazel.com>

	reviewed by: Ramiro Estrugo <ramiro@eazel.com>

	* libnautilus-extensions/nautilus-gtk-extensions.c
	(nautilus_gtk_label_make_bold, nautilus_gtk_label_make_larger,
	nautilus_gtk_label_make_smaller): call gtk_widget_ensure_style
	() before trying to fetch the style

2001-02-22  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Fix bug 6859 (GTK signal macros don't work in non-GCC compilers
	for void return types).

	* libnautilus-extensions/nautilus-gtk-macros.h:
	Replaced old macros that accidentally relied on gccisms with
	new ones that are portable to other compilers.

		NAUTILUS_CALL_PARENT_CLASS is replaced by
			NAUTILUS_CALL_PARENT
		    and NAUTILUS_CALL_PARENT_WITH_RETURN_VALUE.

		NAUTILUS_CALL_VIRTUAL is replaced by
			NAUTILUS_CALL_METHOD
		    and NAUTILUS_CALL_METHOD_WITH_RETURN_VALUE

	* components/adapter/nautilus-adapter-control-embed-strategy.c:
	(nautilus_adapter_control_embed_strategy_destroy):
	* components/adapter/nautilus-adapter-embed-strategy.c:
	(nautilus_adapter_embed_strategy_destroy),
	(nautilus_adapter_embed_strategy_get_widget),
	(nautilus_adapter_embed_strategy_get_zoomable):
	* components/adapter/nautilus-adapter-embeddable-embed-strategy.c:
	(nautilus_adapter_embeddable_embed_strategy_destroy):
	* components/adapter/nautilus-adapter-factory-server.c:
	(nautilus_adapter_factory_server_destroy):
	* components/adapter/nautilus-adapter-file-load-strategy.c:
	(nautilus_adapter_file_load_strategy_destroy):
	* components/adapter/nautilus-adapter-load-strategy.c:
	(nautilus_adapter_load_strategy_destroy),
	(nautilus_adapter_load_strategy_load_location),
	(nautilus_adapter_load_strategy_stop_loading):
	* components/adapter/nautilus-adapter-progressive-load-strategy.c:
	(nautilus_adapter_progressive_load_strategy_destroy):
	* components/adapter/nautilus-adapter-stream-load-strategy.c:
	(nautilus_adapter_stream_load_strategy_destroy):